--- a/index.html
+++ b/index.html
@@ -321,11 +321,11 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/appt.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Design sans titre.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Android Mobile Application</h4>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/appt.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Android Mobile Application"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/Design sans titre.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Android Mobile Application"><i class="bx bx-plus"></i></a>
                 </div>
               </div>
             </div>
